Fix collapsible-group spacing in open position
In the open position, the vertical padding of the collapsible-group items created uncertainity regarding the hoverable item: There was no demarcation. Additionally, the block display of the collapsible-group items caused the underline effect to extend the entire width of the screen, which is undesirable.

--- a/client/src/components/Navbar/collapsible-group.css
+++ b/client/src/components/Navbar/collapsible-group.css
@@ -6,9 +6,9 @@
 
   &--is-expanded {
     @apply visible;
+    height: 144px;
     /* height is hard coded here, so if you want to add or subtract any nav links,
     you will have to adjust this value to whatever the new collapsible-group height is */
-    height: 144px;
   }
 
   @media (--md) {
@@ -16,6 +16,9 @@
   }
 
   &__item {
-    @apply block;
+    @apply inline-block;
+    /* on smaller screens, you don't want the hoverable area to be 100%
+    of parent; that doesn't jibe with pseudo-underline transition */
+    ;
   }
 }
